# napari-multi-channel-zarr

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_multi_channel_zarr/: __init__.py  _widget.py  napari.yaml
src/napari_multi_channel_zarr/_tests/: test_widget.py
