[metadata]
name = napari-multi-channel-zarr

description = Plugin to create multichanel zarr from tiff
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zeroth/napari-multi-channel-zarr
author = Abhishek Patil
author_email = abhishek@zeroth.me
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/zeroth/napari-multi-channel-zarr/issues
    Documentation = https://github.com/zeroth/napari-multi-channel-zarr#README.md
    Source Code = https://github.com/zeroth/napari-multi-channel-zarr
    User Support = https://github.com/zeroth/napari-multi-channel-zarr/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    xarray
    dask
    numpy
    tifffile

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-multi-channel-zarr = napari_multi_channel_zarr:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
